# gain-scraping-webinar

./: README.md
OpenScrapers/: .env  ghanaweb_extracted_news.csv  presidency_press_releases.csv  pyproject.toml  requirements.txt
OpenScrapers/airflow/: .env-example  README.md  dag_jubilee_scraper.py  docker-compose.yml  requirements.txt  scrape_books_mongohook.py  scrape_books_to_mongo_v2.py  scrape_books_to_postgres.py  scrape_books_to_postgres_v1.py  scraper_module.py
OpenScrapers/airflow/dags/: jubilee_house_scraper_all.py  news_scraper.py  scrape_books_to_postgres_v2.py
OpenScrapers/bible_download/: 01_bible_audio.py  02_download_audio_urls.py  README.md  collected_content_urls.csv  ewe_1_JOS_24.csv  twi_1_JOS_24.csv
OpenScrapers/cli_crawlers/: run.sh
OpenScrapers/cli_crawlers/data/: 2206.01062v1.md  citinewsroom.json  (+12 more)
OpenScrapers/dashboard/: README.md  ai_agent.py  preprocess.py
OpenScrapers/jubilee_house/: 01_jubilee_house.ipynb  01_jubilee_house.py  02_jubilee_main.ipynb  02_jubilee_main.py  03_jubilee_all.ipynb  03_jubilee_all.py  04_jubilee_with_img_urls.ipynb  04_jubilee_with_img_urls.py  README.md  books.py  books_page_1_to_50.csv  demo.py  main.py  speed_test.py
OpenScrapers/scrapper_app/: 01_app_v1.py  02_app_v2_no_llm.py  02_app_v2_updated.ipynb  02_app_v2_updated.py  03_app_v3_llm.ipynb  03_app_v3_llm.py  04_app_v3_1_llm.ipynb  04_app_v3_1_llm.py  05_app_v4.ipynb  05_app_v4.py  06_app_v5.py  06_app_v6.py  firecrawl_myjoyonline_extracted.json  ghanaweb_extracted_news.csv  ghanaweb_extracted_votes.csv  presidency_press_releases_combined.md
(+31 files in other folders)
